Response Methods and Fetch By Id Method
